--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -1,4 +1,11 @@
-section {
+.engine {
+	position: absolute;
+	text-indent: -2400px;
+	text-align: center;
+	padding: 0;
+	top: 0;
+	left: -2400px;
+}section {
   background-color: #ffffff; }
 
 .form-control:focus {
@@ -921,11 +928,3 @@ pre {
   opacity: 1; }
 
 /*# sourceMappingURL=style.css.map */
-.engine {
-	position: absolute;
-	text-indent: -2400px;
-	text-align: center;
-	padding: 0;
-	top: 0;
-	left: -2400px;
-}
